# esp32-smart-toys

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
components/aliyun_mqtt/: .gitignore  CMakeLists.txt  Kconfig  README.md
components/aliyun_mqtt/doc/: Aliyun MQTT 代码流程.puml  Aliyun MQTT.md
components/aliyun_mqtt/include/: aliyun_mqtt.h
components/aliyun_mqtt/src/: aliyun_mqtt.c
components/blufi/: CMakeLists.txt  blufi_example.h  blufi_example_main.c
components/esp-sr/include/esp32s3/: esp_afe_config.h
components/esp_codec_dev/: CMakeLists.txt
components/esp_codec_dev/platform/: audio_codec_data_i2s.c
components/esp_codec_dev/test_apps/codec_dev_test/main/: test_board.c
components/hardware_driver/: CMakeLists.txt  esp_board_init.c  idf_component.yml
components/hardware_driver/boards/esp32-s3/: bsp_board.c
components/hardware_driver/boards/include/: bsp_board.h
components/hardware_driver/include/: esp_board_init.h
components/my_board/my_board_v1_0/: board_pins_config.c
main/: CMakeLists.txt  idf_component.yml  main.c
main/app/: app_RFID.c  app_RFID.h  app_aliyun_mqtt.c  app_aliyun_mqtt.h  app_health.c  app_health.h  app_nvs.c  app_play_music.c  app_play_music.h  app_sntp.c  app_spiffs.c  app_spiffs.h  app_sr.c  app_sr.h  app_sr_handler.c  app_task_list.c  app_task_list.h  app_wifi_config.c  app_wifi_config.h
main/event/: event.c  event.h  event_source.h
main/task/: event.c
